@@ -129,7 +129,7 @@ int ap_proxy_connect_handler(request_rec *r, proxy_server_conf *conf,
     apr_size_t i, o, nbytes;
     char buffer[HUGE_STRING_LEN];
     apr_socket_t *client_socket = ap_get_module_config(r->connection->conn_config, &core_module);
-
+    int failed;
     apr_pollfd_t *pollfd;
     apr_int32_t pollcnt;
     apr_int16_t pollevent;
@@ -178,7 +178,7 @@ int ap_proxy_connect_handler(request_rec *r, proxy_server_conf *conf,
 	connectport = uri.port;
 	connect_addr = uri_addr;
     }
-    ap_log_error(APLOG_MARK, APLOG_DEBUG|APLOG_NOERRNO, 0, NULL,
+    ap_log_error(APLOG_MARK, APLOG_DEBUG|APLOG_NOERRNO, 0, r->server,
 		 "proxy: CONNECT: connecting to remote proxy %s on port %d", connectname, connectport);
 
     /* check if ProxyBlock directive on this host */
@@ -195,11 +195,13 @@ int ap_proxy_connect_handler(request_rec *r, proxy_server_conf *conf,
 	    case APR_URI_SNEWS_DEFAULT_PORT:
 		break;
 	    default:
+                /* XXX can we call ap_proxyerror() here to get a nice log message? */
 		return HTTP_FORBIDDEN;
 	}
-    } else if(!allowed_port(conf, uri.port))
+    } else if(!allowed_port(conf, uri.port)) {
+        /* XXX can we call ap_proxyerror() here to get a nice log message? */
 	return HTTP_FORBIDDEN;
-
+    }
 
     /*
      * Step Two: Make the Connection
@@ -216,76 +218,29 @@ int ap_proxy_connect_handler(request_rec *r, proxy_server_conf *conf,
                              connectname, NULL));
     }
 
-	/*
-	 * At this point we have a list of one or more IP addresses of
-	 * the machine to connect to. If configured, reorder this
-	 * list so that the "best candidate" is first try. "best
-	 * candidate" could mean the least loaded server, the fastest
-	 * responding server, whatever.
-         *
-         * For now we do nothing, ie we get DNS round robin.
-	 * XXX FIXME
-         *
-         * We have to create a new socket each time through the loop because
-         *
-         *   (1) On most stacks, connect() fails with EINVAL or similar if
-         *       we previously failed connect() on the socket in the past
-         *   (2) The address family of the socket needs to match that of the
-         *       address we're trying to connect to.
-	 */
+    /*
+     * At this point we have a list of one or more IP addresses of
+     * the machine to connect to. If configured, reorder this
+     * list so that the "best candidate" is first try. "best
+     * candidate" could mean the least loaded server, the fastest
+     * responding server, whatever.
+     *
+     * For now we do nothing, ie we get DNS round robin.
+     * XXX FIXME
+     */
+    failed = ap_proxy_connect_to_backend(&sock, "CONNECT", connect_addr,
+                                         connectname, conf, r->server,
+                                         r->pool);
 
-    /* try each IP address until we connect successfully */
-    {
-	int failed = 1;
-	while (connect_addr) {
-
-            /* create a new socket */
-            if ((rv = apr_socket_create(&sock, connect_addr->family, SOCK_STREAM, r->pool)) != APR_SUCCESS) {
-                ap_log_rerror(APLOG_MARK, APLOG_ERR, rv, r,
-                              "proxy: error creating socket");
-                return HTTP_INTERNAL_SERVER_ERROR;
-            }
-
-            /* Set a timeout on the socket */
-            if (conf->timeout_set == 1 ) {
-                apr_setsocketopt(sock, 
-                                 APR_SO_TIMEOUT, 
-                                 (int)(conf->timeout * APR_USEC_PER_SEC));
-            }
-            else {
-                apr_setsocketopt(sock, 
-                                 APR_SO_TIMEOUT, 
-                                 (int)(r->server->timeout * APR_USEC_PER_SEC));
-            }
-
-	    /* make the connection out of the socket */
-	    rv = apr_connect(sock, connect_addr);
-
-	    /* if an error occurred, loop round and try again */
-            if (rv != APR_SUCCESS) {
-                apr_socket_close(sock);
-		ap_log_error(APLOG_MARK, APLOG_ERR, rv, r->server,
-			     "proxy: CONNECT: attempt to connect to %pI (%s) failed", connect_addr, connectname);
-		connect_addr = connect_addr->next;
-		continue;
-            }
-
-	    /* if we get here, all is well */
-	    failed = 0;
-	    break;
-	}
-
-	/* handle a permanent error from the above loop */
-	if (failed) {
-	    if (proxyname) {
-		return DECLINED;
-	    }
-	    else {
-		return HTTP_BAD_GATEWAY;
-	    }
-	}
+    /* handle a permanent error from the above loop */
+    if (failed) {
+        if (proxyname) {
+            return DECLINED;
+        }
+        else {
+            return HTTP_BAD_GATEWAY;
+        }
     }
-
 
     /*
      * Step Three: Send the Request
