@@ -1,5 +1,10 @@
 Changes with Apache 2.0.34-dev
 
+  *) Proxy HTTP and CONNECT: Keep trying other addresses from the DNS
+     when we can't get a socket in the specified address family.  We may
+     have gotten back an IPv6 address first and yet our system is not
+     configured to allow IPv6 sockets.  [Jeff Trawick]
+
   *) Be more careful about recursively removing CVS directories. Make
      sure that we aren't cd'ing to their home directory first.
      [Aaron Bannert]
